--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -28,6 +28,7 @@ body{
   margin: 0;
   padding: 0 10px 10px;
   max-height:300px;
+  height: 300px;
   overflow-x:hidden;
 }
 .top-bar {
@@ -83,7 +84,9 @@ body{
     border-left-color: rgba(0, 0, 0, 0);
     border-bottom-color: rgba(0, 0, 0, 0);
 }
-
+.escribiendo{
+    background: #e5e5e5;
+}
 .base_sent {
   justify-content: flex-end;
   align-items: flex-end;
@@ -98,7 +101,7 @@ body{
     border: 5px solid white;
     border-right-color: transparent;
     border-top-color: transparent;
-    box-shadow: 1px 1px 2px rgba(black, 0.2); // not quite perfect but close
+    box-shadow: 1px 1px 2px rgba(black, 0.2); 
 }
 
 .msg_sent > time{
@@ -138,4 +141,8 @@ body{
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
 
+}
+
+.active{
+    display: block;
 }
